2011-10-04  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c (calledit): More changes to reduce diffs with W32TeX.

2011-10-01  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: write (sock, buff, n) and send (sock, buff, n, 0)
	for ipc_snd () are different in winsock.

2011-09-30  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c [Aleph]: Remove unused variable `eightbitp'.

2011-09-21  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c [IPC]: More changes to reduce diffs with W32TeX.

2011-09-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c: Disable options -translate-file, -default-translate-file,
	and -8bit for Aleph. The option -kanji-internal=STRING is effective
	also for pTeX and epTeX.

2011-09-02  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c: More changes to reduce diffs with W32TeX.

2011-09-01  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c [WIN32]: Minor rewrite to reduce diffs with W32TeX.

2011-08-30  Akira Kakuto <kakuto@fuk.kindai.ac.jp>

	* texmfmp.c [WIN32]: Remove a semicolon.

2011-08-29  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.c [WIN32]: Allow to build TeX & Co as DLL.

2011-08-23  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Remove some (e-)pTeX cruft.

	* openclose.c [PTEX]: No nkf_open() and nkf_close() for WIN32.

2011-08-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Options for (e-)pTeX and (e-)upTeX.

2011-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Add upTeX and e-upTeX.

2011-08-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Do not #include empty file <kpathsea/recorder.h>.

2011-08-03  Magnus Granberg  <zorry@gentoo.org>

	* texmfmp.c: Use C code for i?86 when -fPIC.

2011-07-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c: Drop `#warning SyncTeX: -synctex command line...'.

2011-05-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* texmfmp.c (ipcpage): Add 'free(cwd)'.
	(generic_synctex_get_current_name): Use xgetcwd().
